--- a/index.html
+++ b/index.html
@@ -4,6 +4,5 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Virtual keyboard</title>
-  <link rel="stylesheet" href="dist/style.css">
 </head>
-<body><script src="dist/script.js"></script></body>
+<body></body>
